Limit displays correctly in balance, correct sticky menu z-index, add limit in select expense category

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,7 +187,7 @@ width: 300px;
 	position: fixed;
 	left: 0;
 	top: 0;
-	z-index: 100;
+	z-index: 9999;
 }
 .lista
 {
